<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity= "center"
    android:orientation= "vertical">


    <TextView
        android:id="@+id/questions_text"
        android:text="@string/registration_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation= "vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity= "center"
            android:orientation= "horizontal">

            <TextView
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/p1" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:background="#CCCCCC"
                android:ems="10"
                android:inputType="textPersonName" >
                <requestFocus />
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity= "center"
            android:orientation= "horizontal">

            <TextView
                android:id="@+id/player2"
                android:text="@string/p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp" />
            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:background="#CCCCCC"
                android:ems="10"
                android:inputType="textPersonName" >
                <requestFocus />
            </EditText>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/fake_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation= "horizontal">
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_right" />
    </LinearLayout>
</LinearLayout>